--- a/static/index.css
+++ b/static/index.css
@@ -8,6 +8,11 @@ body {
     font-family: monospace;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
+
 header {
     display: flex;
     justify-content: space-between;
@@ -62,4 +67,32 @@ footer a {
     color: black;
     text-decoration: none;
     border-bottom: 2px dotted black;
+}
+
+#shorts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1em;
+}
+
+.short {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 400px;
+    border: 1px solid black;
+    border-radius: 4px;
+    padding: 5px;
+    overflow-x: scroll;
+}
+
+.short a {
+    color: black;
+    text-decoration: none;
+    border-bottom: 2px dotted black;
+}
+
+.short:first-child {
+    font-size: 1.7em;
 }
